Fix buttons not visible in smaller devices.

--- a/src/custom-lists/components/overview/sidebar/Index.css
+++ b/src/custom-lists/components/overview/sidebar/Index.css
@@ -46,6 +46,7 @@
     height: inherit;
     min-width: 20vw;
     overflow: hidden;
+    width: max-content;
 }
 
 .allListsInner {
